# rbest

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  exampleapp.cc  exampleapp.hh  flyer.cc  tank.cc
include/Filter/: extendedkalmanfilter.hh  filter.hh  kalmanfilter.hh
include/Filter/KalmanFilter/: kalmanfilter.hh
include/ObservationModel/: differentiableobservationmodel.hh  differrentiableobservationmodel.hh  gaussianobservationmodel.hh  linearobservationmodel.hh  observationmodel.hh
include/SystemModel/: differentiablesystemmodel.hh  gaussiansystemmodel.hh  linearsystemmodel.hh  systemmodel.hh
test/: TestExtendedKalmanFilter.cc  TestKalmanFilter.cc  TestObservationModel.cc  TestSystemModel.cc
